frame/support/test/tests/pallet_ui/call_missing_weight.stderr
error: A pallet::call requires either a concrete weight via `#[pallet::weight]` or an inherited one from the `#[pallet:call(trait  ...)]` attribute but none were given.
  --> tests/pallet_ui/call_missing_weight.rs:17:7
   |
17 |         pub fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {}
   |             ^^
